--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,3 +6,9 @@
 //Blocks
 @use '/src/sass/blocks/header.scss';
 @use '/src/sass/blocks/footer.scss';
+
+//Fonts
+@use '/src/fonts/font.scss';
+
+//Function
+@use '/src/sass/function/function.scss';
