--- a/src/sass/basic/variables.scss
+++ b/src/sass/basic/variables.scss
@@ -1,4 +1,11 @@
+//colors
 $primary: #FFFFFF;
 $secondary-grey-250: #C4C4C4;
 $secondary-grey-500: #525252;
 $secondary-blue: #00DBFF;
+
+//padding
+$screen-width-320: 0 8px;
+$screen-width-768: 0 25px;
+$screen-width-1440: 0 55px;
+$screen-width-1920: 0 100px;
