--- a/src/sass/ui/title.scss
+++ b/src/sass/ui/title.scss
@@ -1,6 +1,12 @@
 @use '/src/sass/basic/mixins.scss'as *;
 @use '/src/sass/basic/variables.scss'as *;
 
+.title-h2 {
+    @include title;
+    font-weight: 400;
+    font-size: 340px;
+}
+
 .link {
     @include title;
     font-weight: 400;
