--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,3 +1,5 @@
+@use '/src/sass/basic/variables.scss'as *;
+
 .header {
     padding-top: 30px;
 
@@ -14,4 +16,49 @@
         padding-left: 0;
     }
 
+    &__slider {
+        height: 100vh;
+    }
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+
+    &-slide {
+        text-align: center;
+        font-size: 18px;
+        background: transparent;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .swiper-pagination-bullet-active {
+        background-color: $secondary-grey-250;
+    }
+
+    .swiper-pagination-bullet {
+        background-color: $secondary-grey-250;
+    }
+
+    .slide-text {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .spin {
+        animation: spin 15s linear infinite;
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
